# rust-winc-driver

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config.toml
examples/: itm.rs
src/: board.rs  main.rs
winc/: Cargo.toml
winc/src/: bsp.rs  commands.rs  crc7.rs  driver.rs  hif.rs  lib.rs
