[package]
authors = ["waj334 <waj334@omibyte.io>"]
edition = "2018"
readme = "README.md"
name = "rust-atsame51g19a"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "0.4.2"
cortex-m = "0.7.6"
cortex-m-semihosting = "0.5.0"
panic-abort = "0.3.2"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"

[dependencies.winc]
path="./winc"

[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[dependencies.atsamd-hal]
version = "0.15"
default-features = false

[features]
default = ["rt", "atsamd-hal/same51g", "atsamd-hal/same51", "atsamd-hal/unproven"]
rt = ["cortex-m-rt", "atsamd-hal/same51g-rt"]
unproven = ["atsamd-hal/unproven"]

# this lets you use `cargo fix`!
[[bin]]
name = "rust-atsame51g19a"
test = false
bench = false

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"

# for cargo flash
[package.metadata]
chip = "ATSAME51G19A"